# driftlock

./: .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  ROADMAP.md  SECURITY.md  TDD.md  deny.toml  gaps.md  justfile  nvidia-inception-reply.md  probe_extract.py  probe_requests.jsonl
.doctrine/: README.md
.driftlock/: README.md  events.example.jsonl
.github/workflows/: conformance-taudit.yml  governance.yml  publish-dry-run.yml  quality.yml  release.yml
contracts/: README.md  VERSION.md
contracts/events/: README.md
contracts/examples/: claim.active.valid.json  event.graph-built.valid.json  event.task-claimed.valid.json  work-order.complete.json  work-order.gates.json
contracts/schemas/: claim.generated.schema.json  claim.schema.json  diff-report.generated.schema.json  diff-report.schema.json  event.schema.json  lane-manifest.generated.schema.json  lane-manifest.schema.json  mcp-tools.schema.json  taskgraph.generated.schema.json  taskgraph.schema.json  work-order.generated.schema.json  work-order.schema.json
crates/driftlock-cli/: Cargo.toml  README.md  metadata.json
crates/driftlock-cli/src/: doctor.rs  main.rs  support.rs
crates/driftlock-cli/tests/: cli_contracts.rs
crates/driftlock-contracts/: Cargo.toml  README.md  metadata.json
crates/driftlock-contracts/src/: lib.rs
crates/driftlock-contracts/tests/: schema_bundle.rs
crates/driftlock-core/: Cargo.toml  README.md  metadata.json
crates/driftlock-core/src/: acceptance.rs  adr.rs  brief.rs  conflict.rs  diff.rs  error.rs  extractor.rs  graph.rs  lib.rs  model.rs  readiness.rs  schema.rs
crates/driftlock-core/tests/: contract_work_order.rs
crates/driftlock-git/: Cargo.toml  README.md  metadata.json
crates/driftlock-git/src/: lib.rs
crates/driftlock-mcp/: Cargo.toml  README.md  metadata.json
crates/driftlock-mcp/src/: lib.rs  main.rs  manual_stdio.rs  rmcp_adapter.rs  service.rs  tool_contracts.rs
crates/driftlock-mcp/tests/: manual_protocol.rs
crates/driftlock-skills/: Cargo.toml  README.md  build.rs  metadata.json
crates/driftlock-skills/embed/prompts/: maintainer-refresh.md  planner-extract-adr.md  reviewer-gate.md
crates/driftlock-skills/embed/skills/driftlock/: SKILL.md
crates/driftlock-skills/embed/skills/driftlock-maintainer/: SKILL.md
crates/driftlock-skills/embed/skills/driftlock-mcp-operator/: SKILL.md
crates/driftlock-skills/embed/skills/driftlock-reviewer/: SKILL.md
crates/driftlock-skills/embed/skills/driftlock-tdd/: SKILL.md
crates/driftlock-skills/embed/skills/driftlock-worker/: SKILL.md
crates/driftlock-skills/src/: lib.rs
crates/driftlock-store/: Cargo.toml  metadata.json
crates/driftlock-store/src/: audit.rs  checkpoint.rs  claims.rs  events.rs  key.rs  lib.rs  paths.rs  persistence.rs  receipt.rs  signing.rs
crates/driftlock-store/tests/: persistence.rs  signed_events.rs
docs/: BUILD_SPEC.md  CODE_COMPLETE.md  HOSTS.md  PARITY_BACKLOG.md  PUBLISH.md  VERSIONING.md  cloudevents-schema.md  contracts.md  examples.md  getting-started.md  glossary.md  lanes.md  mcp.md  release.md  seam-freeze-v1.md  threat-model.md
docs/adrs/: 0001-contracts-and-schema-first.md  0002-taskgraph-primary-artifact.md  0003-lane-manifest-and-conflict-model.md  0004-rust-workspace-and-mcp-stdio.md  0005-skill-pack-runtime-governance.md  0006-tdd-first-delivery.md  0007-conservative-safety-defaults.md  0008-local-state-audit-ledger.md  README.md
docs/audit/: operations.yaml
docs/demo/driftlock-writeset-escape/: README.md  index.html  reproduce.ps1
docs/demo/driftlock-writeset-escape/findings/: compliant.report.json  escaping.report.json
docs/demo/driftlock-writeset-escape/input/: taskgraph.json
docs/demo/driftlock-writeset-escape/results/: complete-escaping.txt  gate-exit-codes.txt  summary.md
examples/: mcp-client-config.example.json
examples/fixture-repo/: README.md  lanes.toml
examples/fixture-repo/docs/adrs/: 0001-session-store.md
lanes/: default.toml
metadata/: mcp.manifest.json  root.project.json  skill-pack.manifest.json
metadata/crates/: driftlock-cli.json  driftlock-contracts.json  driftlock-core.json  driftlock-git.json  driftlock-mcp.json  driftlock-skills.json  driftlock-store.json
prompts/: agent-brief-template.md  conflict-review.md  worker-start.md
scripts/: bootstrap.sh  conformance.sh  ecosystem_governance.sh  harden.sh  mcp_smoke.py  release_smoke.sh  requirements-contracts.txt  supply-chain-gate.sh  validate_audit_operations.py  validate_contracts.py  verify_scaffold.py
scripts/ci/: check_cloudevents_schema.sh  conformance_taudit.sh  generate_sbom.sh
skills/driftlock-planner/: SKILL.md
target-ablation/: .rustc_info.json
target-ablation/release/.fingerprint/aho-corasick-748e63d1d6ec27e5/: lib-aho_corasick
target-ablation/release/.fingerprint/anstyle-841aff2dc4dbb81d/: lib-anstyle
target-ablation/release/.fingerprint/anstyle-parse-15932830ee53b563/: lib-anstyle_parse.json
target-ablation/release/.fingerprint/anyhow-8f5f0808b539f445/: build-script-build-script-build.json
target-ablation/release/.fingerprint/autocfg-d4e9175b1e128130/: lib-autocfg
target-ablation/release/.fingerprint/bstr-8bc23048b7b92419/: lib-bstr  lib-bstr.json
target-ablation/release/.fingerprint/cfg-if-86ca5aae94b35851/: lib-cfg_if  lib-cfg_if.json
target-ci/: .rustc_info.json
target-ci/release/: driftlock.d
tasks/: COMPLETED.md  README.md  adr-0001-T01.md  adr-0001-T02.md  adr-0001-T03.md  adr-0002-T01.md  adr-0002-T02.md  adr-0002-T03.md  adr-0003-T01.md  adr-0003-T02.md  adr-0003-T03.md  adr-0004-T01.md  adr-0004-T02.md  adr-0004-T03.md  adr-0005-T01.md  adr-0005-T02.md  adr-0005-T03.md  adr-0006-T01.md  adr-0006-T02.md  adr-0006-T03.md  adr-0007-T01.md  adr-0007-T02.md  adr-0007-T03.md  adr-0008-T01.md  adr-0008-T02.md  adr-0008-T03.md  ledger.jsonl  taskgraph.json
tests/fixtures/ecosystem/: correlation-join.json
tests/golden/: agent-brief.adr-0002-T01.md  conflict.shared-write.json
(+298 files in other folders)
