[workspace]
resolver = "2"
members = [
  "crates/driftlock-core",
  "crates/driftlock-git",
  "crates/driftlock-contracts",
  "crates/driftlock-skills",
  "crates/driftlock-store",
  "crates/driftlock-cli",
  "crates/driftlock-mcp"
]

[workspace.package]
version = "0.1.1"
edition = "2021"
rust-version = "1.88"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/0ryant/driftlock"
homepage = "https://github.com/0ryant/driftlock"
description = "ADR-derived canonical work orders and safe lanes for multi-agent software delivery."
readme = "README.md"
keywords = ["mcp", "agents", "adr", "taskgraph", "governance"]
categories = ["development-tools", "command-line-utilities"]

[workspace.dependencies]
anyhow = "1"
camino = { version = "1", features = ["serde1"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
clap = { version = "4", features = ["derive", "env"] }
globset = "0.4"
ignore = "0.4"
once_cell = "1"
regex = "1"
rmcp = { version = "1.7.0", features = ["server", "transport-io"] }
schemars = { version = "0.8", features = ["chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["io-std", "io-util", "macros", "rt-multi-thread"] }
toml = "1.1"
tracing = "0.1"
walkdir = "2"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.10"
# Pinned to rand_core 0.6 to match ed25519-dalek 2.x's RNG trait bounds; the
# rand 0.10 bump moved OsRng to incompatible rand_core 0.10 traits.
rand_core = { version = "0.6", features = ["getrandom"] }
base64 = "0.22"
sha2 = "0.11"
hex = "0.4"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
