[package]
name = "driftlock-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "CLI for Driftlock."

[dependencies]
anyhow.workspace = true
clap.workspace = true
driftlock-contracts = { path = "../driftlock-contracts" }
driftlock-core = { path = "../driftlock-core" }
driftlock-git = { path = "../driftlock-git" }
driftlock-skills = { path = "../driftlock-skills" }
driftlock-store = { path = "../driftlock-store" }
serde_json.workspace = true
chrono.workspace = true
toml.workspace = true

[lints]
workspace = true

[[bin]]
name = "driftlock"
path = "src/main.rs"
