[package]
name = "driftlock-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "CLI for Driftlock."
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
driftlock-contracts = { version = "0.1.0", path = "../driftlock-contracts" }
driftlock-core = { version = "0.1.0", path = "../driftlock-core" }
driftlock-git = { version = "0.1.0", path = "../driftlock-git" }
driftlock-skills = { version = "0.1.0", path = "../driftlock-skills" }
driftlock-store = { version = "0.1.0", path = "../driftlock-store" }
serde_json.workspace = true
chrono.workspace = true
toml.workspace = true

[lints]
workspace = true

[[bin]]
name = "driftlock"
path = "src/main.rs"
