[package]
name = "driftlock-contracts"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Schema export and contract fixtures for Driftlock."

[dependencies]
anyhow.workspace = true
driftlock-core = { path = "../driftlock-core" }
schemars.workspace = true
serde_json.workspace = true

[lints]
workspace = true

[[bin]]
name = "export-schemas"
path = "src/bin/export_schemas.rs"
