[package]
name = "driftlock-contracts"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Schema export and contract fixtures for Driftlock."
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
anyhow.workspace = true
driftlock-core = { version = "0.1.0", path = "../driftlock-core" }
schemars.workspace = true
serde_json.workspace = true

[lints]
workspace = true

[[bin]]
name = "export-schemas"
path = "src/bin/export_schemas.rs"
