[package]
name = "driftlock-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Domain model and safety logic for Driftlock."
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
chrono.workspace = true
globset.workspace = true
regex.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
