[package]
name = "driftlock-git"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Git and repository helpers for Driftlock."

[dependencies]
anyhow.workspace = true
ignore.workspace = true
serde.workspace = true
walkdir.workspace = true

[lints]
workspace = true
