[package]
name = "driftlock-git"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Git and repository helpers for Driftlock."
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
anyhow.workspace = true
ignore.workspace = true
serde.workspace = true
walkdir.workspace = true

[lints]
workspace = true
