[package]
name = "driftlock-skills"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Embedded Driftlock skill and prompt resources."
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
serde.workspace = true

[lints]
workspace = true
